<resources>

    <string name="app_name">Fiap - Android Final</string>

    <!--Login -->
    <string name="label_login_email">Mail</string>
    <string name="label_login_password">Password</string>
    <string name="label_bt_login">Login</string>
    <string name="label_bt_about">About</string>
    <string name="label_bt_signup">Sign Up</string>
    <string name="invalid_email_message">Invalid mail</string>
    <string name="invalid_password_message">Invalid password</string>
    <string name="invalid_credentials_message">Invalid credentials</string>

    <!--Cadastro-->
    <string name="label_register_confirm_password">Confirm password</string>
    <string name="label_bt_register">Register</string>
    <string name="invalid_password_length_message">Password must be at least 8 characteres</string>
    <string name="invalid_password_confirm_message">Passwords dont match</string>
    <string name="label_bt_backlogin">Return</string>

    <!--Fragment de registro do veículo -->
    <string name="marca_do_ve_culo">Type the vehicle brand</string>
    <string name="modelo_do_ve_culo">Type the vehicle model</string>
    <string name="cadastrar_ve_culo">Register Vehicle</string>
    <string name="cars_fragment">Vehicles</string>

    <!--Registro do veículo -->
    <string name="car_registered">Successfully registered vehicle!</string>
    <string name="car_error_insert">Error when inserting vehicle!</string>
    <string name="register_label">CarDastro - Vehicle Registration</string>
    <string name="update">Update</string>
    <string name="car_update_sucess">Vehicle successfully updated!</string>
    <string name="apagar_ve_culo">Delete Vehicle</string>
    <string name="car_delete_sucess">Successfully deleted vehicle!</string>
    <string name="car_error_delete">Error when deleting vehicle!</string>
    <string name="car_error_update">Error when updating vehicle!</string>
    <string name="delete_confirm">Confirm deletion?</string>
    <string name="ok_dialog">Ok</string>
    <string name="cancel_dialog">Cancel</string>

    <!-- Tela inicial -->
    <string name="empty_list_car_message">Oops, you don\'t have any cars on your list</string>

</resources>