<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.RegisterActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="@dimen/card_login_width"
        android:layout_height="@dimen/card_login_height"
        android:layout_marginStart="@dimen/card_login_margin_start"
        android:layout_marginTop="@dimen/card_margin_top"
        android:layout_marginEnd="@dimen/card_margin_end"
        android:layout_marginBottom="@dimen/card_margin_bottom"
        app:cardCornerRadius="@dimen/corner"
        app:cardElevation="@dimen/elevatin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo_car"
                android:layout_gravity="center"
                android:src="@drawable/logo_home"
                android:layout_width="@dimen/logo_w_reg"
                android:layout_height="@dimen/logo_h_reg"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_marginStart="@dimen/margin_22dp"
        android:fontFamily="@font/orbitronbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login_email" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_marginStart="@dimen/margin_20"
        android:fontFamily="@font/orbitronbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin32dp"
        android:text="@string/label_login_password" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin12dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvPasswordConfirm"
        android:layout_marginStart="@dimen/margin_20"
        android:fontFamily="@font/orbitronbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin32dp"
        android:text="@string/label_register_confirm_password" />

    <EditText
        android:id="@+id/inputPasswordConfirm"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin12dp"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btRegister"
        android:layout_gravity="left"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:drawableEnd="@drawable/ic_record_register"
        android:paddingEnd="@dimen/margin12dp"
        android:paddingStart="@dimen/margin18dp"
        android:layout_marginTop="@dimen/margin_20"
        android:fontFamily="@font/orbitronbold"
        android:background="@drawable/bg_btn"
        android:layout_width="@dimen/wid200"
        android:layout_height="wrap_content"
        android:text="@string/label_bt_register" />

    <Button
        android:id="@+id/btBackLogin"
        android:layout_gravity="left"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/orbitronbold"
        android:background="@drawable/bg_btn_version"
        android:layout_width="@dimen/wid200"
        android:layout_marginTop="@dimen/margin_20"

        android:layout_height="wrap_content"
        android:text="@string/label_bt_backlogin" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>